# soop-web

./: .env.example  .gitignore  Dockerfile  example_balloon.py  nixpacks.toml  railway.json  requirements.txt
api/: _db.py  auth.py  balloon.py  export.py  init.py  memo.py
frontend/: .env.example  index.html  package.json
frontend/public/: chat-sdk.js
frontend/src/: App.vue
frontend/src/stores/: auth.js  config.js
frontend/src/views/: Dashboard.vue  Login.vue  Redirect.vue
server/: main.py
soopchat/: __init__.py  api.py  client.py  constants.py  messages.py  pyproject.toml  types.py  utils.py
